--- a/java-jna/settings.gradle
+++ b/java-jna/settings.gradle
@@ -7,6 +7,4 @@
  * in the user manual at https://docs.gradle.org/6.1.1/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'jni-demo'
-
-include 'native', 'java-jni', 'java-jna'
+rootProject.name = 'java-jna'
